fixes overflow issue

--- a/sass/pages/_front.scss
+++ b/sass/pages/_front.scss
@@ -1,4 +1,6 @@
 .homepage-event {
+    overflow: hidden;
+    
     &__video {
         height: 90vh;
         background-position: center center;
